fix menu display on mobile

--- a/profil-decor-frontend/assets/css/main.css
+++ b/profil-decor-frontend/assets/css/main.css
@@ -9,5 +9,9 @@ body {
 }
 
 .custom-height {
-  height: calc(100dvh - 4rem);
+  height: calc(100vh - 4rem);
+}
+
+.custom-menu-height {
+  height: calc(100dvh - 4vw)
 }
